# deploy-machine-learning

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  space.yaml
.github/: ci.yaml
.github/ workflows/: ci.yaml
.github/workflows/: ci.yaml  deploy.yaml
alembic/: env.py
alembic/versions/: 24251a13df00_ml_outputs.py  99e339b56253_initial_schema.py  b48f06bd8fd6_create_employee_dataset.py  ecd589af543e_ml_inputs.py
notebook/: 1_Analyse.ipynb  2_Nettoyage_Standardisation.ipynb  3_Feature_Engineering.ipynb  4_Modelisation.ipynb  df.joblib
src/: features.py  main.py  model_loader.py
src/config/: db.py
src/controllers/: home_controller.py  predict_controller.py
src/models/: employee_dataset.py  ml.py  ml_inputs.py  ml_output.py
src/schemas/: PredictItemResult.py  PredictRequest.py  PredictResponse.py
src/seeds/: employee_dataset_seed.py  ml_models_seed.py
src/shema/: ModelFeatures.py
tests/: test_home.py  test_main.py  test_predict.py
tests/unit/: test_features.py
utils/: scoring.py
