[tool.poetry]
name = "deploy-machine-learning"
version = "0.1.0"
description = ""
authors = ["marintosti12 <marintosti12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
