[tool.poetry]
name = "deploy-machine-learning"
version = "0.1.0"
description = ""
authors = ["marintosti12 <marintosti12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
joblib = "^1.5.2"
scipy = "^1.16.1"
scikit-learn = "^1.7.2"
imbalanced-learn = "^0.14.0"
shap = "^0.48.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
huggingface-hub = "^0.34.4"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "notebook/*.ipynb", 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]